k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloops
  namespace: helloops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloops
  template:
    metadata:
      labels:
        app: helloops
    spec:
      containers:
      - name: helloops
        image: helloops:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
