k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloops
  namespace: helloops
spec:
  selector:
    app: helloops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
