k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloops-ingress
  namespace: helloops
spec:
  rules:
    - host: helloops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helloops
                port:
                  number: 80
